# ppt-plan-visual

./: .gitignore  README.md  azure-pipelines.yml  create_command_line_app.sh  index.md  requirements.txt  run_integration_cmd.sh  run_plan.sh  run_plan_cmd.sh  run_ukview_plan_cmd-02.sh  setup.cfg  setup.py
.github/workflows/: python-app.yml  python-publish.yml
devops/: create_command_line_app.sh  run_UKV_scenarios_cmd.sh  run_kbt_plan_cmd.sh  setup.cfg  setup.py
docs/: index.md
source/: common_display_attributes.py  excel_config.py  excel_plan.py  exceptions.py  layout_attributes.py  plan_activity.py  plan_visual.py  plan_visual_driver.py  plan_visualiser.py  plot_driver.py  plotable_element.py  ppt_plot_plan_main.py  shape_formatting.py  test_plot_driver.py  utilities.py  visual_element_shape.py
source/refactor_temp/: activity_layout_attributes.py  plan_activity.py  plotable_element.py  plottable_element.py  shape_formatting.py  text_formatting.py
source/tests/: full_unit_test_01.py  test_from_excel_data.py  test_horizontal_layout.py  test_layout.py  test_plan_activity.py  test_plan_visual.py  test_plot_driver.py  test_ppt_plan.py  test_read_excel.py  test_utilities.py  testing_utilities.py
source/tests/test_data/: test_data_01.py
source/tests/test_resources/unit_test_01/: expected_results.py
source/visualiser/: excel_config.py  excel_plan.py  exceptions.py  plan_activity.py  plan_visualiser.py  plot_driver.py  plotable_element.py  ppt_plot_plan_main.py  read_excel.py  shape_formatting.py  text_formatting.py  utilities.py
(+10 files in other folders)
