[metadata]
name = plan_visualiser
version = 0.0.2
author = Sevire
author_email = tbg-sevire@genonline.co.uk
description = Package which creates a PowerPoint slide of a plan from an Excel workbook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sevire/ppt-plan-visual
project_urls =
    Bug Tracker = https://github.com/sevire/ppt-plan-visual/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = source
packages = ['source', 'source.refactor_temp']:
python_requires = >=3.6

[options.packages.find]
where = source